# ai-context-manager

./: .coverage  LICENSE  MANIFEST.in  README.md  config.json  coverage.xml  plan_mvp.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  selection.yaml  setup.py  test_import_command.py
.github/workflows/: ci.yml
_ai/backlog/active/: 260324_1049__IMPLEMENTATION_PLAN__replace-repomix-with-native-xml-generator.md
_ai/backlog/archive/: 250911__PLAN__help-flag-alias.md  250914__PLAN__fix-stuff-and-mature-codebase.md  251208__PLAN__simplify.md  (+12 more)
ai-plans/: 251203__PLAN__tui.md  251212__PLAN__rag-integration-qdrant.md  251212__PLAN__show-rag-sources.md  251212__REPORT__rag-integration-qdrant.md  251214__IMPLEMENTATION_REPORT__strict-schema-enforcement.md  251215__IMPLEMENTATION_PLAN__add-file-folder-counts-to-repomix.md  251215__IMPLEMENTATION_PLAN__debug-tags-and-list-feature.md  251215__IMPLEMENTATION_REPORT__add-related-tags-metadata.md  251215__IMPLEMENTATION_REPORT__debug-tags-and-list-feature.md  251215__IMPLEMENTATION_REPORT__tag-based-context-generation.md  fix_cli_import_error_plan.md  mvp_status_report.md
ai_context_manager/: __init__.py  __main__.py  cli.py  config.py
ai_context_manager/commands/: __init__.py  add_cmd.py  chat_cmd.py  debug_cmd.py  export_cmd.py  generate_cmd.py  import_cmd.py  init_cmd.py  list_cmd.py  profile_cmd.py  remove_cmd.py  select_cmd.py
ai_context_manager/core/: exporter.py  profile.py  rag.py  selection.py  selector.py
ai_context_manager/schemas/: context-definition.schema.json  frontmatter.json
ai_context_manager/utils/: clipboard.py  file_utils.py  token_counter.py
ai_docs/plans/: 2501005__PLAN__json-support.md  250914__PLAN__add-init-command.md  mvp_status_report.md
ai_plans/: 251104__PLAN__Add-a-debug-Command.md
docs/: debug.md  export.md  rag.md  selector.md
examples/: export_example.py  selector_example.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_export_cmd.py  test_exporter.py  test_integration.py  test_profile.py  test_profile_cmd.py  test_selector.py  test_token_counter.py
tests/commands/: test_add_cmd.py  test_debug_cmd.py  test_export_cmd.py  test_generate_cmd.py  test_generate_tags.py  test_import_cmd.py  test_init_cmd.py  test_profile_cmd.py  test_remove_list_cmd.py
tests/core/: test_content_transform.py  test_native_xml_renderer.py  test_profile.py
tests/utils/: test_file_utils.py  test_token_counter.py
(+7 files in other folders)
